--- a/src/main/java/com/mycompany/librarymanagement/BookManagement.form
+++ b/src/main/java/com/mycompany/librarymanagement/BookManagement.form
@@ -24,34 +24,26 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
-                      <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="addUser" alignment="0" max="32767" attributes="0"/>
-                          <Component id="isssueBook" alignment="0" max="32767" attributes="0"/>
-                          <Component id="showUser" alignment="0" pref="130" max="32767" attributes="0"/>
-                          <Component id="addbook" max="32767" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="76" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="updateBook" max="32767" attributes="0"/>
-                          <Component id="showBook" max="32767" attributes="0"/>
-                          <Component id="returnBook" alignment="0" max="32767" attributes="0"/>
-                          <Component id="showIssue" alignment="0" max="32767" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="134" max="-2" attributes="0"/>
-                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-                  </Group>
-              </Group>
-              <EmptySpace pref="26" max="32767" attributes="0"/>
+              <EmptySpace min="-2" pref="134" max="-2" attributes="0"/>
+              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+              <EmptySpace pref="134" max="32767" attributes="0"/>
           </Group>
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
-              <Component id="backBtn1" min="-2" pref="100" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="144" max="-2" attributes="0"/>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="addUser" alignment="0" max="32767" attributes="0"/>
+                  <Component id="isssueBook" alignment="0" max="32767" attributes="0"/>
+                  <Component id="showUser" alignment="0" pref="130" max="32767" attributes="0"/>
+                  <Component id="addbook" max="32767" attributes="0"/>
+              </Group>
+              <EmptySpace max="32767" attributes="0"/>
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Component id="updateBook" max="32767" attributes="0"/>
+                  <Component id="showBook" max="32767" attributes="0"/>
+                  <Component id="returnBook" alignment="0" max="32767" attributes="0"/>
+                  <Component id="showIssue" alignment="0" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -80,9 +72,7 @@
                   <Component id="showIssue" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
                   <Component id="showUser" alignment="3" min="-2" pref="36" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
-              <Component id="backBtn1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace pref="15" max="32767" attributes="0"/>
+              <EmptySpace pref="44" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -116,11 +106,6 @@
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="updateBookActionPerformed"/>
       </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="backBtn1">
-      <Properties>
-        <Property name="text" type="java.lang.String" value="&lt;&lt;BACK"/>
-      </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="addUser">
       <Properties>
