--- a/src/main/java/com/mycompany/librarymanagement/UpdateBook.form
+++ b/src/main/java/com/mycompany/librarymanagement/UpdateBook.form
@@ -43,12 +43,12 @@
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jLabel2" min="-2" pref="81" max="-2" attributes="0"/>
                               <EmptySpace max="32767" attributes="0"/>
-                              <Component id="bookIDField" min="-2" pref="254" max="-2" attributes="0"/>
+                              <Component id="bookID" min="-2" pref="254" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <Component id="jLabel1" max="32767" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="newBookNameField" min="-2" pref="254" max="-2" attributes="0"/>
+                              <Component id="newBook" min="-2" pref="254" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -56,7 +56,7 @@
                       <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                       <Component id="jLabel4" min="-2" pref="101" max="-2" attributes="0"/>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                      <Component id="newBookCopyField" min="-2" pref="254" max="-2" attributes="0"/>
+                      <Component id="newCopy" min="-2" pref="254" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="15" max="-2" attributes="0"/>
@@ -70,17 +70,17 @@
               <Component id="jLabel5" pref="32" max="32767" attributes="0"/>
               <EmptySpace min="-2" pref="30" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="bookIDField" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="bookID" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
                   <Component id="jLabel2" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="36" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="newBookNameField" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="newBook" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
                   <Component id="jLabel1" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="newBookCopyField" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
+                  <Component id="newCopy" alignment="3" min="-2" pref="32" max="-2" attributes="0"/>
                   <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -94,11 +94,11 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JTextField" name="bookIDField">
+    <Component class="javax.swing.JTextField" name="bookID">
     </Component>
-    <Component class="javax.swing.JTextField" name="newBookNameField">
+    <Component class="javax.swing.JTextField" name="newBook">
     </Component>
-    <Component class="javax.swing.JTextField" name="newBookCopyField">
+    <Component class="javax.swing.JTextField" name="newCopy">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
@@ -119,6 +119,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Update Book"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="UpdateBookBtnActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
